[tool.poetry]
name = "prayog-api"
version = "0.1.0"
description = "prayog-api provides a rest interface to the prayog-core, which is itself a collection of experimentation algriothms"
authors = ["hussainpithawala"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "prayog_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
cassandra-driver = "^3.29.2"
python-json-logger = "^3.3.0"
python-dotenv = "^1.1.0"
opentelemetry-api = "^1.32.1"
opentelemetry-sdk = "^1.32.1"
opentelemetry-exporter-otlp = "^1.32.1"
opentelemetry-instrumentation = "^0.53b1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
opentelemetry-instrumentation-cassandra = "^0.53b1"
opentelemetry-instrumentation-logging = "^0.53b1"
prometheus-client = "^0.21.1"
pydantic-settings = "^2.9.1"
pipdeptree = "^2.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
